# hpe-core

./: .gitignore  CMakeLists.txt  license  readme.md
include/: hpe_core.hpp  hrnet_2d.hpp  opencv_cap.hpp  sync_cap_core.hpp  triangulate_3d.hpp
src/: hpe_core.cpp  hrnet_2d.cpp  main.cpp  opencv_cap.cpp  sync_cap_core.cpp  triangulate_3d.cpp
